card centering almost done

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
 <header>
-<h1>Title</h1>
+<h1>Jeopardy · <span>ish</span></h1>
 </header>
+<div class="container">
+
 <div class="stack1">
     <div class="card"></div>
     <div class="card"></div>
@@ -20,7 +22,7 @@
         <div class="card"></div>
         <div class="card"></div>
     </div>
-
+</div>
 
 
 
