--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 <header>
 <h1>Jeopardy · <span>ish</span></h1>
 </header>
-<div class="container">
+<!-- <div class="container"> -->
 
 <div class="stack1">
-    <div class="card"></div>
-    <div class="card"></div>
+    <div class="card" id="top">1</div>
+    <div class="card" id="bottom">2</div>
 </div>
 
 <div class="stack2">
-        <div class="card"></div>
-        <div class="card"></div>
+        <div class="card" id="left">3</div>
+        <div class="card" id="right">4</div>
     </div>
-</div>
+<!-- </div> -->
 
 
 
