added score board

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
 <header>
 <h1>Jeopardy · <span>ish</span></h1>
+
+<div class="scoreContainer">
+<h1>Score</h1> <div class="score">0</div>
+</div>
 </header>
+
 <!-- <div class="container"> -->
 
 <div class="stack1">
