added background and audio

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
     <div class="card" id="top">1</div>
     <div class="card" id="bottom">2</div>
 </div>
-
+<!-- change sample audio to theme music!! -->
+<audio controls src="Audio/Juice.mp3"></audio>
 <div class="stack2">
         <div class="card" id="left">3</div>
         <div class="card" id="right">4</div>
     </div>
 <!-- </div> -->
+
 
 
 
