--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div class="card" id="top">1</div>
     <div class="card" id="bottom">2</div>
 </div>
-<!-- change sample audio to theme music!! -->
-<audio controls src="Audio/Juice.mp3"></audio>
+<!-- audio from https://soundcloud.com/uzijacuzi/jeopardy-theme-remix -->
+<audio controls src="Audio/Jeopardy Theme Remix (mp3cut.net).mp3"></audio>
 <div class="stack2">
         <div class="card" id="left">3</div>
         <div class="card" id="right">4</div>
