beginning work on modal

--- a/index.html
+++ b/index.html
@@ -16,22 +16,31 @@
 </div>
 </header>
 
+<!-- audio from https://soundcloud.com/uzijacuzi/jeopardy-theme-remix -->
+<audio controls src="Audio/Jeopardy Theme Remix (mp3cut.net).mp3"></audio>
+
+<div class="modal">
+        <div class="question">question goes here</div>
+        <div class="answers">
+        <div class="answerbox" id="a1">1</div>
+        <div class="answerbox" id="a2">2</div>
+        <div class="answerbox" id="a3">3</div>
+        <div class="answerbox" id="a4">4</div>
+    </div>
+    </div>
+
 <!-- <div class="container"> -->
 
 <div class="stack1">
-    <div class="card" id="top">1</div>
-    <div class="card" id="bottom">2</div>
+    <div class="card" id="top">Category Name</div>
+    <div class="card" id="bottom">Category Name</div>
 </div>
-<!-- audio from https://soundcloud.com/uzijacuzi/jeopardy-theme-remix -->
-<audio controls src="Audio/Jeopardy Theme Remix (mp3cut.net).mp3"></audio>
+
 <div class="stack2">
-        <div class="card" id="left">3</div>
-        <div class="card" id="right">4</div>
+        <div class="card" id="left">Category Name</div>
+        <div class="card" id="right">Category Name</div>
     </div>
 <!-- </div> -->
-
-
-
 
     <script src="app.js"></script>
 </body>
