--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,41 +8,46 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<header>
-<h1>Jeopardy · <span>ish</span></h1>
+    <header>
+        <h1>Jeopardy · <span>ish</span></h1>
 
-<div class="scoreContainer">
-<h1>Score</h1> <div class="score">0</div>
-</div>
-</header>
+        <div class="scoreContainer">
+            <h1>Score</h1>
+            <div class="score">0</div>
+        </div>
+    </header>
 
-<!-- audio from https://soundcloud.com/uzijacuzi/jeopardy-theme-remix -->
-<audio controls src="Audio/Jeopardy Theme Remix (mp3cut.net).mp3"></audio>
+    <!-- audio from https://soundcloud.com/uzijacuzi/jeopardy-theme-remix -->
+    <audio controls src="Audio/Jeopardy Theme Remix (mp3cut.net).mp3"></audio>
 
-<div class="modal">
-        <div class="question">question goes here</div>
-        <div class="answers">
-        <div class="answerbox" id="a1">1</div>
-        <div class="answerbox" id="a2">2</div>
-        <div class="answerbox" id="a3">3</div>
-        <div class="answerbox" id="a4">4</div>
-    </div>
+    <div class="stack1">
+        <div class="card" id="top">Category Name</div>
+        <div class="card" id="bottom">Category Name</div>
     </div>
 
-<!-- <div class="container"> -->
-
-<div class="stack1">
-    <div class="card" id="top">Category Name</div>
-    <div class="card" id="bottom">Category Name</div>
-</div>
-
-<div class="stack2">
+    <div class="stack2">
         <div class="card" id="left">Category Name</div>
         <div class="card" id="right">Category Name</div>
     </div>
-<!-- </div> -->
+
+    <div class="modal">
+            <div class="question">
+            <div class="close">&diamondsuit;</div>
+                <h2>ipsum, dolor sit amet consectetur adipisicing elit. Odit dicta animi cum unde, quam quia delectus dolor,
+                    aliquam ab, fugit totam porro similique ducimus atque eveniet officia alias perspiciatis repudiandae.
+                </h2>
+            </div>
+            <div class="answers">
+                <div class="answerbox" id="a1">1</div>
+                <div class="answerbox" id="a2">2</div>
+                <div class="answerbox" id="a3">3</div>
+                <div class="answerbox" id="a4">4</div>
+            </div>
+        </div>
 
     <script src="app.js"></script>
 </body>
+
 </html>
