--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="modal">
             <div class="question">
             <div class="close">&diamondsuit;</div>
-                <h2>ipsum, dolor sit amet consectetur adipisicing elit. Odit dicta animi cum unde, quam quia delectus dolor,
+                <h2 id="questionbox">ipsum, dolor sit amet consectetur adipisicing elit. Odit dicta animi cum unde, quam quia delectus dolor,
                     aliquam ab, fugit totam porro similique ducimus atque eveniet officia alias perspiciatis repudiandae.
                 </h2>
             </div>
