--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <audio controls src="Audio/Jeopardy Theme Remix (mp3cut.net).mp3"></audio>
 
     <div class="stack1">
-        <div class="card" id="top">Category Name</div>
-        <div class="card" id="bottom">Category Name</div>
+        <div class="card" id="top">100</div>
+        <div class="card" id="bottom">500</div>
     </div>
 
     <div class="stack2">
-        <div class="card" id="left">Category Name</div>
-        <div class="card" id="right">Category Name</div>
+        <div class="card" id="left">700</div>
+        <div class="card" id="right">300</div>
     </div>
 
     <div class="modal">
