readme and 100 point questions in progress

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
     </header>
 
-    <!-- audio from https://soundcloud.com/uzijacuzi/jeopardy-theme-remix -->
-    <audio controls src="Audio/Jeopardy Theme Remix (mp3cut.net).mp3"></audio>
+    <!-- audio from https://soundcloud.com/uzijacuzi/jeopardy-theme-remix
+    <audio controls src="Audio/Jeopardy Theme Remix (mp3cut.net).mp3"></audio> -->
 
     <div class="stack1">
         <div class="card" id="top">100</div>
@@ -34,7 +34,10 @@
 
     <div class="modal">
             <div class="question">
-            <div class="close">&diamondsuit;</div>
+            <div class="close">
+                <!-- audio from https://soundcloud.com/uzijacuzi/jeopardy-theme-remix -->
+    <audio controls src="Audio/Jeopardy Theme Remix (mp3cut.net).mp3"></audio>
+            </div>
                 <h2 id="questionbox">ipsum, dolor sit amet consectetur adipisicing elit. Odit dicta animi cum unde, quam quia delectus dolor,
                     aliquam ab, fugit totam porro similique ducimus atque eveniet officia alias perspiciatis repudiandae.
                 </h2>
