--- a/index.html
+++ b/index.html
@@ -50,6 +50,24 @@
             </div>
         </div>
 
+        <div class="modal2">
+                <div class="question2">
+                <div class="close2">
+                    <!-- audio from https://soundcloud.com/uzijacuzi/jeopardy-theme-remix -->
+        <audio controls src="Audio/Jeopardy Theme Remix (mp3cut.net).mp3"></audio>
+                </div>
+                    <h2 id="questionbox2">ipsum, dolor sit amet consectetur adipisicing elit. Odit dicta animi cum unde, quam quia delectus dolor,
+                        aliquam ab, fugit totam porro similique ducimus atque eveniet officia alias perspiciatis repudiandae.
+                    </h2>
+                </div>
+                <div class="answers2">
+                    <div class="answerbox2" id="a12">1</div>
+                    <div class="answerbox2" id="a22">2</div>
+                    <div class="answerbox2" id="a32">3</div>
+                    <div class="answerbox2" id="a42">4</div>
+                </div>
+            </div>
+
     <script src="app.js"></script>
 </body>
 
