right and bottom card work

--- a/index.html
+++ b/index.html
@@ -68,6 +68,42 @@
                 </div>
             </div>
 
+            <div class="modal3">
+                    <div class="question3">
+                    <div class="close3">
+                        <!-- audio from https://soundcloud.com/uzijacuzi/jeopardy-theme-remix -->
+            <audio controls src="Audio/Jeopardy Theme Remix (mp3cut.net).mp3"></audio>
+                    </div>
+                        <h2 id="questionbox3">ipsum, dolor sit amet consectetur adipisicing elit. Odit dicta animi cum unde, quam quia delectus dolor,
+                            aliquam ab, fugit totam porro similique ducimus atque eveniet officia alias perspiciatis repudiandae.
+                        </h2>
+                    </div>
+                    <div class="answers2">
+                        <div class="answerbox2" id="a13">1</div>
+                        <div class="answerbox2" id="a23">2</div>
+                        <div class="answerbox2" id="a33">3</div>
+                        <div class="answerbox2" id="a43">4</div>
+                    </div>
+                </div>
+
+                <div class="modal4">
+                        <div class="question4">
+                        <div class="close4">
+                            <!-- audio from https://soundcloud.com/uzijacuzi/jeopardy-theme-remix -->
+                <audio controls src="Audio/Jeopardy Theme Remix (mp3cut.net).mp3"></audio>
+                        </div>
+                            <h2 id="questionbox4">ipsum, dolor sit amet consectetur adipisicing elit. Odit dicta animi cum unde, quam quia delectus dolor,
+                                aliquam ab, fugit totam porro similique ducimus atque eveniet officia alias perspiciatis repudiandae.
+                            </h2>
+                        </div>
+                        <div class="answers4">
+                            <div class="answerbox2" id="a14">1</div>
+                            <div class="answerbox2" id="a24">2</div>
+                            <div class="answerbox2" id="a34">3</div>
+                            <div class="answerbox2" id="a44">4</div>
+                        </div>
+                    </div>
+
     <script src="app.js"></script>
 </body>
 
