--- a/index.html
+++ b/index.html
@@ -33,77 +33,80 @@
     </div>
 
     <div class="modal">
-            <div class="question">
+        <div class="question">
             <div class="close">
                 <!-- audio from https://soundcloud.com/uzijacuzi/jeopardy-theme-remix -->
-    <audio controls src="Audio/Jeopardy Theme Remix (mp3cut.net).mp3"></audio>
-            </div>
-                <h2 id="questionbox">ipsum, dolor sit amet consectetur adipisicing elit. Odit dicta animi cum unde, quam quia delectus dolor,
-                    aliquam ab, fugit totam porro similique ducimus atque eveniet officia alias perspiciatis repudiandae.
-                </h2>
-            </div>
-            <div class="answers">
-                <div class="answerbox" id="a1">1</div>
-                <div class="answerbox" id="a2">2</div>
-                <div class="answerbox" id="a3">3</div>
-                <div class="answerbox" id="a4">4</div>
-            </div>
-        </div>
-
-        <div class="modal2">
-                <div class="question2">
-                <div class="close2">
-                    <!-- audio from https://soundcloud.com/uzijacuzi/jeopardy-theme-remix -->
-        <audio controls src="Audio/Jeopardy Theme Remix (mp3cut.net).mp3"></audio>
-                </div>
-                    <h2 id="questionbox2">ipsum, dolor sit amet consectetur adipisicing elit. Odit dicta animi cum unde, quam quia delectus dolor,
-                        aliquam ab, fugit totam porro similique ducimus atque eveniet officia alias perspiciatis repudiandae.
-                    </h2>
-                </div>
-                <div class="answers2">
-                    <div class="answerbox2" id="a12">1</div>
-                    <div class="answerbox2" id="a22">2</div>
-                    <div class="answerbox2" id="a32">3</div>
-                    <div class="answerbox2" id="a42">4</div>
-                </div>
-            </div>
-
-            <div class="modal3">
-                    <div class="question3">
-                    <div class="close3">
-                        <!-- audio from https://soundcloud.com/uzijacuzi/jeopardy-theme-remix -->
-            <audio controls src="Audio/Jeopardy Theme Remix (mp3cut.net).mp3"></audio>
-                    </div>
-                        <h2 id="questionbox3">ipsum, dolor sit amet consectetur adipisicing elit. Odit dicta animi cum unde, quam quia delectus dolor,
-                            aliquam ab, fugit totam porro similique ducimus atque eveniet officia alias perspiciatis repudiandae.
-                        </h2>
-                    </div>
-                    <div class="answers2">
-                        <div class="answerbox2" id="a13">1</div>
-                        <div class="answerbox2" id="a23">2</div>
-                        <div class="answerbox2" id="a33">3</div>
-                        <div class="answerbox2" id="a43">4</div>
-                    </div>
-                </div>
-
-                <div class="modal4">
-                        <div class="question4">
-                        <div class="close4">
-                            <!-- audio from https://soundcloud.com/uzijacuzi/jeopardy-theme-remix -->
                 <audio controls src="Audio/Jeopardy Theme Remix (mp3cut.net).mp3"></audio>
-                        </div>
-                            <h2 id="questionbox4">ipsum, dolor sit amet consectetur adipisicing elit. Odit dicta animi cum unde, quam quia delectus dolor,
-                                aliquam ab, fugit totam porro similique ducimus atque eveniet officia alias perspiciatis repudiandae.
-                            </h2>
-                        </div>
-                        <div class="answers4">
-                            <div class="answerbox2" id="a14">1</div>
-                            <div class="answerbox2" id="a24">2</div>
-                            <div class="answerbox2" id="a34">3</div>
-                            <div class="answerbox2" id="a44">4</div>
-                        </div>
-                    </div>
+            </div>
+            <h2 id="questionbox">ipsum, dolor sit amet consectetur adipisicing elit. Odit dicta animi cum unde, quam
+                quia delectus dolor,
+                aliquam ab, fugit totam porro similique ducimus atque eveniet officia alias perspiciatis repudiandae.
+            </h2>
+        </div>
+        <div class="answers">
+            <div class="answerbox" id="a1">1</div>
+            <div class="answerbox" id="a2">2</div>
+            <div class="answerbox" id="a3">3</div>
+            <div class="answerbox" id="a4">4</div>
+        </div>
+    </div>
 
+    <div class="modal2">
+        <div class="question2">
+            <div class="close2">
+                <!-- audio from https://soundcloud.com/uzijacuzi/jeopardy-theme-remix -->
+                <audio controls src="Audio/Jeopardy Theme Remix (mp3cut.net).mp3"></audio>
+            </div>
+            <h2 id="questionbox2">ipsum, dolor sit amet consectetur adipisicing elit. Odit dicta animi cum unde, quam
+                quia delectus dolor,
+                aliquam ab, fugit totam porro similique ducimus atque eveniet officia alias perspiciatis repudiandae.
+            </h2>
+        </div>
+        <div class="answers2">
+            <div class="answerbox2" id="a12">1</div>
+            <div class="answerbox2" id="a22">2</div>
+            <div class="answerbox2" id="a32">3</div>
+            <div class="answerbox2" id="a42">4</div>
+        </div>
+    </div>
+
+    <div class="modal3">
+        <div class="question3">
+            <div class="close3">
+                <!-- audio from https://soundcloud.com/uzijacuzi/jeopardy-theme-remix -->
+                <audio controls src="Audio/Jeopardy Theme Remix (mp3cut.net).mp3"></audio>
+            </div>
+            <h2 id="questionbox3">ipsum, dolor sit amet consectetur adipisicing elit. Odit dicta animi cum unde, quam
+                quia delectus dolor,
+                aliquam ab, fugit totam porro similique ducimus atque eveniet officia alias perspiciatis repudiandae.
+            </h2>
+        </div>
+        <div class="answers3">
+            <div class="answerbox3" id="a13">1</div>
+            <div class="answerbox3" id="a23">2</div>
+            <div class="answerbox3" id="a33">3</div>
+            <div class="answerbox3" id="a43">4</div>
+        </div>
+    </div>
+
+    <div class="modal4">
+        <div class="question4">
+            <div class="close4">
+                <!-- audio from https://soundcloud.com/uzijacuzi/jeopardy-theme-remix -->
+                <audio controls src="Audio/Jeopardy Theme Remix (mp3cut.net).mp3"></audio>
+            </div>
+            <h2 id="questionbox4">ipsum, dolor sit amet consectetur adipisicing elit. Odit dicta animi cum unde, quam
+                quia delectus dolor,
+                aliquam ab, fugit totam porro similique ducimus atque eveniet officia alias perspiciatis repudiandae.
+            </h2>
+        </div>
+        <div class="answers4">
+            <div class="answerbox4" id="a14">1</div>
+            <div class="answerbox4" id="a24">2</div>
+            <div class="answerbox4" id="a34">3</div>
+            <div class="answerbox4" id="a44">4</div>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 
